# tree-sitter-awa5_rs

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-awa5_rs.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_awa5_rs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAwa5Rs/: awa5_rs.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
