[package]
name = "tree-sitter-awa5_rs"
description = "AWA5.RS grammar for tree-sitter"
version = "0.1.2"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "awa5_rs", "awasm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/liraymond04/tree-sitter-awa5_rs"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
